dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 215, 217, 206;
-    --background-end-rgb: 246, 246, 243;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 34;
+    --background-end-rgb: 0, 0, 42;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :root {
         --foreground-rgb: 255, 255, 255;
         --background-start-rgb: 0, 0, 0;
         --background-end-rgb: 0, 0, 0;
     }
-}
+} */
 
 body {
     min-height: 100vh;
@@ -26,5 +26,3 @@ body {
         )
         rgb(var(--background-start-rgb));
 }
-
-/* 215, 217, 206 */
